# rocket

./: .gitignore  .travis.yml  License  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: conf.py  getting_started.rst  index.rst
flight/: __init__.py
flight/control/: __init__.py  attitude.py
flight/guidance/: __init__.py  first_stage_landing.py  gfold.py  gravity_turn.py  orbital_insertion.py  polynomial_guidance.py  powered_descent.py
openrocketengine/: __init__.py  analysis.py  engine.py  nozzle.py  output.py  plotting.py  propellants.py  results.py  system.py  tanks.py  units.py
openrocketengine/core/: rocket.py
openrocketengine/cycles/: __init__.py  base.py  gas_generator.py  pressure_fed.py  staged_combustion.py
openrocketengine/examples/: __init__.py  basic_engine.py  cycle_comparison.py  optimization.py  propellant_design.py  thermal_analysis.py  trade_study.py  uncertainty_analysis.py
openrocketengine/thermal/: __init__.py  heat_flux.py  regenerative.py
rocket/: __init__.py  analysis.py  cycle_corrections.py  engine.py  export.py  isentropic.py  nozzle.py  orbital.py  orbital_plotting.py  output.py  plotting.py  project.py  propellants.py  results.py  storage.py  studies.py  system.py  tanks.py  units.py  validation.py
rocket/cycles/: base.py  (+4 more)
scripts/: launch_to_orbit.py  test_gfold.py  two_stage_rtls.py
tests/: test_dynamics.py  test_engine.py  test_examples.py  test_isentropic.py  test_nozzle.py  test_orbital.py  test_propellants.py  test_simulator.py  test_tanks.py  test_units.py
web/: index.html  package.json
(+56 files in other folders)
