[project]
name = "rocket"
version = "0.3.0"
description = "Rocket - Tools for rocket vehicle design and analysis"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Cameron Flannery" }
]
keywords = ["rocket", "propulsion", "aerospace", "engineering", "nozzle", "tanks", "vehicle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=2.0",
    "beartype>=0.18",
    "numba>=0.60",
    "matplotlib>=3.9",
    "rocketcea>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/cmflannery/rocket"
Repository = "https://github.com/cmflannery/rocket"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
